# Caustica

./: .gitignore  README.md  RESTIR_PLAN.md  build.gradle  flake.nix  gradle.properties  runClient.ps1  settings.gradle
docs/: ASYNC_TERRAIN_PLAN.md  MATERIAL_SYSTEM_REFACTOR.md  SAFE_MODE_BISECT.md  developer_guide.md  gallery.md
native/ngx_shim/: CMakeLists.txt  ngx_shim.cpp
shaders/display/: display.comp
shaders/rt/: display.comp  shadow.rmiss  world.rahit  world.rchit  world.rgen
shaders/world/: shadow.rmiss.slang  world.rahit.slang  world.rchit.slang  world.rgen  world.rgen.slang  world.rmiss  world.rmiss.slang  world_common.slang  world_glsl.rgen
src/main/java/dev/comfyfluffy/caustica/: CausticaConfig.java
src/main/java/dev/upscaler/: UpscalerConfig.java  UpscalerMod.java
src/main/java/dev/upscaler/client/: FsrPipeline.java  FsrSmokeTest.java  UpscalerClient.java  WorldRenderScaler.java
src/main/java/dev/upscaler/ffx/: FfxLibrary.java  FfxUpscaleContext.java
src/main/java/dev/upscaler/mixin/: ClientLevelLightMixin.java  GameRendererMixin.java  GpuDeviceAccessor.java  RenderTargetAccessor.java  VulkanBackendMixin.java  VulkanGpuSurfaceMixin.java
src/main/java/dev/upscaler/ngx/: NgxRuntime.java
src/main/java/dev/upscaler/rt/: RtAccel.java  RtComposite.java  RtContext.java  RtDlssRr.java  RtEntities.java  RtEntityCapture.java  RtEntityCollector.java  RtPipeline.java  RtTerrain.java
src/main/java/dev/upscaler/tools/: StandaloneFsrProbe.java
src/main/resources/: fabric.mod.json  upscaler.mixins.json
(+45 files in other folders)
